Added basic styling

--- a/index.html
+++ b/index.html
@@ -8,9 +8,11 @@
     </head>
 
     <body>
-        <div class="results"></div>
-        <div class="numbers"></div>
-        <div class="operations"></div>
+        <div class="calculator">
+            <div class="results"></div>
+            <div class="numbers"></div>
+            <div class="operations"></div>
+        </div>
         <p class="footer">made by: <a href="https://github.com/fengkp">Feng Parra</a></p>
     </body>
 </html>
