--- a/index.html
+++ b/index.html
@@ -14,5 +14,6 @@
             <div class="operations"></div>
         </div>
         <p class="footer">made by: <a href="https://github.com/fengkp">Feng Parra</a></p>
+        <button class="test">test</button>
     </body>
 </html>
