Results box displays numbers on button press

--- a/index.html
+++ b/index.html
@@ -10,10 +10,11 @@
     <body>
         <div class="calculator">
             <div class="results"></div>
-            <div class="numbers"></div>
-            <div class="operations"></div>
+            <div class="pad">
+                <div class="numbers"></div>
+                <div class="operations"></div>
+            </div>
         </div>
         <p class="footer">made by: <a href="https://github.com/fengkp">Feng Parra</a></p>
-        <button class="test">test</button>
     </body>
 </html>
