--- a/index.html
+++ b/index.html
@@ -9,10 +9,31 @@
 
     <body>
         <div class="calculator">
-            <div class="results"></div>
+            <div class="results">
+                <h2 class="result">0</h2>
+            </div>
             <div class="pad">
-                <div class="numbers"></div>
-                <div class="operations"></div>
+                <div class="numbers">
+                    <button class="btn-num">1</button>
+                    <button class="btn-num">2</button>
+                    <button class="btn-num">3</button>
+                    <button class="btn-num">4</button>
+                    <button class="btn-num">5</button>
+                    <button class="btn-num">6</button>
+                    <button class="btn-num">7</button>
+                    <button class="btn-num">8</button>
+                    <button class="btn-num">9</button>
+                    <button class="btn-num">0</button>
+                    <button class="btn-num">DEL</button>
+                    <button class="btn-num">CLR</button>
+                </div>
+                <div class="operations">
+                    <button class="btn-op">+</button>
+                    <button class="btn-op">-</button>
+                    <button class="btn-op">*</button>
+                    <button class="btn-op">/</button>
+                    <button class="btn-op">=</button>
+                </div>
             </div>
         </div>
         <p class="footer">made by: <a href="https://github.com/fengkp">Feng Parra</a></p>
