Addition works Equals button initiates addition based on numbers added to the queue.

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                     <button class="btn-op">-</button>
                     <button class="btn-op">*</button>
                     <button class="btn-op">/</button>
-                    <button class="btn-op">=</button>
+                    <button class="equal-btn">=</button>
                 </div>
             </div>
         </div>
