--- a/index.html
+++ b/index.html
@@ -24,15 +24,15 @@
                     <button class="btn-num">8</button>
                     <button class="btn-num">9</button>
                     <button class="btn-num">0</button>
-                    <button class="btn-num">DEL</button>
-                    <button class="btn-num">CLR</button>
+                    <button class="btn-del">DEL</button>
+                    <button class="btn-clr">CLR</button>
                 </div>
                 <div class="operations">
                     <button class="btn-op">+</button>
                     <button class="btn-op">-</button>
                     <button class="btn-op">*</button>
                     <button class="btn-op">/</button>
-                    <button class="equal-btn">=</button>
+                    <button class="btn-equal">=</button>
                 </div>
             </div>
         </div>
